src/objects/Quote_Template_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores details about which Quote Template Id should be applied for a particular sales process</description>
    <fields>
        <fullName>Ad_Hoc_Direct_Debit_Form_Template_Id__c</fullName>
        <label>Ad Hoc Direct Debit Form Template Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conventional_Review_TemplateId__c</fullName>
        <label>Conventional Review Template Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conventional_Signature_TemplateId__c</fullName>
        <label>Conventional Signature Template Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serviced_Review_TemplateId__c</fullName>
        <label>Serviced Review Template Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serviced_Signature_TemplateId__c</fullName>
        <label>Serviced Signature Template Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Review_TemplateId__c</fullName>
        <label>Virtual Review Template Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Signature_TemplateId__c</fullName>
        <label>Virtual Signature Template Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Quote Template Settings</label>
</CustomObject>